<resources>
    <string name="TITLE_TOOLS_CALCULATORS">Tools and Calculators</string>
    <string name="HEART_AGE_CALCULATOR">Heart Age Calculator</string>
    <string name="DIABETES_CALCULATOR">Diabetes Calculator</string>
    <string name="HYPERTENSION_CALCULATOR">Hypertension Calculator</string>
    <string name="STRESS_ANXIETY_CALCULATOR">Stress And Anxiety Calculator</string>
    <string name="SMART_PHONE_CALCULATOR">Smart Phone Addiction</string>
    <string name="DUE_DATE_CALCULATOR">Due Date Calculator</string>
    <string name="TRACKER_HEART_AGE">Heart Age \n Calculator</string>
    <string name="TRACKER_DIABETES">Diabetes \n Calculator</string>
    <string name="TRACKER_HYPERTENSION">Hypertension \n Calculator</string>
    <string name="TRACKER_STRESS_ANXIETY">Stress &amp; Anxiety\nCalculator</string>
    <string name="TRACKER_SMART_PHONE">Smart Phone \n Addiction</string>
    <string name="TRACKER_DUE_DATE">Due Date \n Calculator</string>
    <string name="TRACKER_VACCINATION">Vaccination \n Calculator</string>
    <string name="TRACKER_DESC_HEART_AGE">Is your Heart is as young as you are?</string>
    <string name="TRACKER_DESC_DIABETES">Know your diabetes risk\n</string>
    <string name="TRACKER_DESC_HYPERTENSION">Know your blood pressure\n</string>
    <string name="TRACKER_DESC_STRESS_ANXIETY">Are you feeling  stressed?\n</string>
    <string name="TRACKER_DESC_SMART_PHONE">Addicted to smartphone?\n</string>
    <string name="TRACKER_DESC_DUE_DATE">Know your due date\n</string>
    <string name="TRACKER_DESC_VACCINATION">Track your vaccination\n</string>
    <string name="PROFILE_PARAMETERS">Profile Parameters</string>
    <string name="MEASUREMENT_PARAMETERS">Measurement Parameters</string>
    <string name="LIFESTYLE_CHANGES">Lifestyle Changes</string>
    <string name="AGE_IN_YEARS">Age in years</string>
    <string name="TODAY_VIA_MOBILE_ENTRY">Today via mobile entry</string>
    <string name="LOW_RISK_1">Low Risk</string>
    <string name="HIGH_RISK_1">High Risk</string>
    <string name="SELECT_ALL_THAT_APPLIES_TO_YOU">Select all that applies to you</string>
    <string name="HEALTH_CONDITION">Health Condition</string>
    <string name="DIABETES">Diabetes</string>
    <string name="KIDNEY_DISEASE">Kidney disease</string>
    <string name="STROKE">Stroke</string>
    <string name="CORONARY_ARTERY">Coronary artery</string>
    <string name="HIGH_CHOLESTEROL">High cholesterol</string>
    <string name="FAMILY_HISTORY_OF_HEART_DISEASE">Family history of heart disease</string>
    <string name="HEART_DISEASE">Heart disease</string>
    <string name="UNDER_35_YEARS">Under 35 Years</string>
    <string name="AGE_35_TO_44">35 – 44</string>
    <string name="AGE_45_TO_54">45 – 54</string>
    <string name="AGE_55_TO_64">55 – 64</string>
    <string name="AGE_65_YRS_OR_OVER">65 yrs or Over</string>
    <string name="RANGE_0_TO_4">0 – 4</string>
    <string name="UPPER_LIMIT">Upper Limit</string>
    <string name="LOWER_LIMIT">Lower Limit</string>
    <string name="DEPRESSION">Depression</string>
    <string name="ANXIETY">Anxiety</string>
    <string name="STRESS">Stress</string>
    <string name="DYSPHORIA">Dysphoria</string>
    <string name="LACK_OF_INTEREST_INVOLVEMENT">Lack of interest / involvement</string>
    <string name="HOPELESSNESS">Hopelessness</string>
    <string name="ANHEDONIA">Anhedonia</string>
    <string name="DEVALUATION_OF_LIFE">Devaluation of life</string>
    <string name="INERTIA">Inertia</string>
    <string name="AUTONOMIC_AROUSAL">Autonomic arousal</string>
    <string name="SELF_DEPRECATION">Self-deprecation</string>
    <string name="SKELETAL_MUSCLE_EFFECTS">Stress</string>
    <string name="SUBJECTIVE_EXPERIENCE_OF_ANXIOUS_AFFECT">Subjective experience of anxious affect</string>
    <string name="SITUATIONAL_ANXIETY">Situational anxiety</string>
    <string name="DIFFICULTY_RELAXING">Difficulty relaxing</string>
    <string name="NERVOUS_AROUSAL">Nervous arousal</string>
    <string name="BEING_EASILY_UPSET_AGITATED_IRRITABLE_OVER_REACTIVE_AND_IMPATIENT">Being easily upset/agitated, irritable/over-reactive and impatient</string>
    <string name="BASED_ON_YOUR_SCORE_YOU_HAVE">Based on your Score you have</string>
    <string name="PROBABILITY_OF_GETTING_DIABETES">% Probability of getting diabetes</string>
    <string name="YRS">yrs</string>
    <string name="HEART_AGE">Heart Age</string>
    <string name="HEART_RISK">Heart Risk</string>
    <string name="YOUR_AGE">Your Age</string>
    <string name="YOU_ARE_UNDER">You are under</string>
    <string name="HYPERTENSION_SUMMARY">Hypertension Summary</string>
    <string name="OPTIMUM_RISK">Optimum Risk</string>
    <string name="RISK_1">Risk 1</string>
    <string name="RISK_2">Risk 2</string>
    <string name="YEAR_1">Year 1</string>
    <string name="YEAR_2">Year 2</string>
    <string name="YEAR_4">Year 4</string>
    <string name="VIEW_DETAILED_REPORT">View Detailed Report</string>
    <string name="RESTART_ASSESSMENT">Restart Assessment</string>
    <string name="SYSTOLIC_BP">Systolic BP</string>
    <string name="DIASTOLIC_BP">Diastolic BP</string>
    <string name="SYSTOLIC_DIALOG_TITLE">Systolic &amp; Diastolic BP</string>
    <string name="SYSTOLIC_DIALOG_MESSAGE">Enter your blood pressure details</string>
    <string name="BMI">BMI</string>
    <string name="LIPID">LIPID</string>
    <string name="INCH">inch</string>
    <string name="DIABETES_RANGE_LOW_RISK">0–5</string>
    <string name="DIABETES_RANGE_MILD_RISK">6–11</string>
    <string name="DIABETES_RANGE_MODERATE_RISK">12–19</string>
    <string name="DIABETES_RANGE_HIGH_RISK">20–47</string>
    <string name="SPA_RANGE_LOW_RISK">0 – 6</string>
    <string name="SPA_RANGE_MILD_RISK">7 – 23</string>
    <string name="SPA_RANGE_MODERATE_RISK">24 – 39</string>
    <string name="SPA_RANGE_SEVERE_RISK">40 – 55</string>
    <string name="NEVER">Never</string>
    <string name="SOMETIMES">Sometimes</string>
    <string name="OFTEN">Often</string>
    <string name="ALWAYS">Always</string>
    <string name="ALMOST_ALWAYS">Almost Always</string>
    <string name="NORMAL">Normal</string>
    <string name="MILD">Mild</string>
    <string name="MODERATE">Moderate</string>
    <string name="SEVERE">Severe</string>
    <string name="EXTREMELY_SEVERE">Extremely \n Severe</string>
    <string name="LOW_RISK">Low \n Risk</string>
    <string name="MILD_RISK">Mild \n Risk</string>
    <string name="MODERATE_RISK">Moderate \n Risk</string>
    <string name="SEVERE_RISK">Severe \n Risk</string>
    <string name="HIGH_RISK">High \n Risk</string>
    <string name="NORMAL_RISK">Normal \n Risk</string>
    <string name="EXTREMELY_SEVER_RISK">Extremely \n Severe Risk</string>
    <string name="LAST_MENSTRUAL_PERIOD">Last Menstrual Period (LMP)</string>
    <string name="YOUR_BABY_IS_DUE_ON_OR_AROUND">Your baby is due on or around</string>
    <string name="DUE_DATE_OBSERVATION">* This is an estimated date of when your baby is due. Babies rarely keep to an exact timetable, so your full-term pregnancy can be anywhere between <h2><b>37 and 42 weeks.</b></h2> </string>
    <string name="LABEL_MENSTRUAL_PERIOD_LMP">Enter the date of the first day of your last menstrual period (LMP) :</string>
    <string name="THE_DEPRESSION_SCALE_ASSESSES">The Depression scale assesses</string>
    <string name="THE_ANXIETY_SCALE_ASSESSES">The Anxiety scale assesses</string>
    <string name="THE_STRESS_SCALE_ASSESSES">The Stress scale assesses</string>
    <string name="YOU_HAVE_FOLLOWING_NON_MODERATE_RISK">You have following Non Moderate Risk</string>
    <string name="TO_MANAGE_YOUR_EMOTIONAL_HEALTH">To manage your emotional health</string>
    <string name="HEALTH_CONDITION_CONTENT">if you have any of these risk factors ,your risk may be higher than what is shown in the tool</string>
    <string name="HEALTH_CONDITION_QUESTION">Do you have any of these health conditions ?</string>
    <string name="HEALTH_CONDITION_RESULT">You have selected</string>
    <string name="STRESS_SUMMERY_OBSERVATION1">The DASS-21 should not be used to replace a face to face clinical interview. If you are experiencing significant emotional difficulties you should contact your doctor.</string>
    <string name="STRESS_SUMMERY_OBSERVATION">The Depression, Anxiety and Stress Scale - 21 Items (DASS-21) is a set of three self-report scales designed to measure the emotional states of depression, anxiety and stress. Each of the three DASS-21 scales contains 7 items, divided into subscales with similar content.</string>
    <string name="HYPERTENSION_SUMMARY_TEXT">The Hypertension calculator gives you an overall idea of the health and a general indication of how lifestyle-related factors may affect your Blood Pressure. The risk has been calculated based on the parameters for your age group, gender.</string>
    <string name="HEART_AGE_SUMMARY_TEXT">The Heart Age and Risk gives you a overall idea of the health of your heart and general indication of how lifestyle related factors may affect your heart health.</string>
    <string name="ITS_TIME_TO_MAKE_SOME_CHANGES">Its time to make some changes !</string>
    <string name="PLEASE_INPUT_VALUE_BETWEEN">Please input value between</string>
    <string name="PLEASE_FILL">Please fill</string>
    <string name="PLEASE_FILL_HEIGHT_DETAILS">Please fill height details</string>
    <string name="PLEASE_FILL_WEIGHT_DETAILS">Please fill weight details</string>
    <string name="ENTER_YOUR">Enter your</string>
    <string name="PARAMETER_VALUE">parameter value</string>
    <string name="SHOULD_BE_BETWEEN">should be between</string>
    <string name="PLEASE_PROVIDE_AGE">Please provide age</string>
    <string name="ENTER_AGE_BETWEEN_18_AND_74_YEARS">Enter Age between 18 and 74 years</string>
    <string name="YOU_ARE_DOING_GOOD_IN">You are doing good in</string>
    <string name="YOU_NEED_TO_IMPROVE_ON">You need to improve on</string>
    <string name="YOU_HAVE_FOLLOWING_ON_MODIFIABLE_RISK">You have following Non Modifiable Risk</string>
    <string name="NO_NOMOPHOBIC">No \n Nomophobic</string>
    <string name="MILD_NOMOPHOBIC">Mild \n Nomophobic</string>
    <string name="MODERATE_NOMOPHOBIC">Moderate \n Nomophobic</string>
    <string name="SEVERE_NOMOPHOBIC">Severe \n Nomophobic</string>
    <string name="NOT_AT_ALL_NOMOPHOBIC">Not at all \n Nomophobic</string>
    <string name="MILD_NOMOPHOBIA">Mild \n Nomophobic</string>
    <string name="MODERATE_NOMOPHOBIA">Moderate \n Nomophobic</string>
    <string name="SEVERE_NOMOPHOBIA">Severe \n Nomophobic</string>
    <string name="HAVE_NO_NOMOPHOBIA">You have No Nomophobia</string>
    <string name="HAVE_MILD_NOMOPHOBIA">You have Mild Nomophobia</string>
    <string name="HAVE_MODERATE_NOMOPHOBIA">You have Moderate Nomophobia</string>
    <string name="HAVE_SEVERE_NOMOPHOBIA">You have Severe Nomophobia</string>
    <string name="DESC_MILD_NOMOPHOBIC">You have mild nomophobia. You get a little antsy when you forget your phone at home for a day or get stuck somewhere without WiFi, but the anxiety isn\'t too overwhelming.</string>
    <string name="DESC_MODERATE_NOMOPHOBIC">You have moderate nomophobia. You\'re pretty attached to your device. You often check for updates while you\'re walking down the street or talking to a friend, and you often feel anxious when you\'re disconnected. You are just on the edge of becoming addicted. However, it is good that you do not let your Smartphone come in the way. Sometimes, you avoid your phone and feel bad for it, but the rest part of being with family, children, etc, makes you happy. So, you just need to beware!.</string>
</resources>