<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel"
            type="com.caressa.tools_calculators.viewmodel.ToolsCalculatorsViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_margin="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_close_input">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lbl_health_condition"
                    style="@style/VivantTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/_16sdp"
                    android:text="@string/HEALTH_CONDITION"
                    android:layout_marginTop="@dimen/_15sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lbl_select_that_applies"
                    style="@style/ToolsQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textSize="@dimen/_12sdp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/SELECT_ALL_THAT_APPLIES_TO_YOU"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lbl_health_condition"/>

                <com.caressa.common.view.FlowLayout
                    android:id="@+id/lay_selection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:flRowSpacing="@dimen/_6sdp"
                    app:flChildSpacing="@dimen/_6sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lbl_select_that_applies">

                </com.caressa.common.view.FlowLayout>

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@color/vivant_pale_grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lay_selection"/>

                <com.caressa.common.view.FlowLayout
                    android:id="@+id/lay_deselection"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    app:flRowSpacing="@dimen/_6sdp"
                    app:flChildSpacing="@dimen/_6sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    app:layout_constraintEnd_toEndOf="@+id/view"
                    app:layout_constraintStart_toStartOf="@+id/view"
                    app:layout_constraintTop_toBottomOf="@id/view">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btn_diabetes"
                        style="@style/ToolsBtnDeselection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:tag="DIAB"
                        android:text="@string/DIABETES" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btn_kidney"
                        style="@style/ToolsBtnDeselection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:tag="KIDNY"
                        android:text="@string/KIDNEY_DISEASE"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btn_stroke"
                        style="@style/ToolsBtnDeselection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:tag="STROCK"
                        android:text="@string/STROKE"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btn_coronary"
                        style="@style/ToolsBtnDeselection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:tag="CRART"
                        android:text="@string/CORONARY_ARTERY"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btn_cholestrol"
                        style="@style/ToolsBtnDeselection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:tag="INC_CHOL"
                        android:text="@string/HIGH_CHOLESTEROL"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btn_family"
                        style="@style/ToolsBtnDeselection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="FH_HRT"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:text="@string/FAMILY_HISTORY_OF_HEART_DISEASE"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btn_heart"
                        style="@style/ToolsBtnDeselection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:tag="HRTPROB"
                        android:text="@string/HEART_DISEASE" />

                </com.caressa.common.view.FlowLayout>

                <com.caressa.common.view.ArcButton
                    android:id="@+id/btn_save_health_condition"
                    app:isTemplate="true"
                    style="@style/CustomButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_25sdp"
                    android:text="@string/SAVE"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lay_deselection"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_close"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/circle_drawable"
            android:backgroundTint="@color/white"
            android:elevation="@dimen/_3sdp"
            android:padding="@dimen/_4sdp"
            app:srcCompat="@drawable/ic_close"
            android:tint="@color/vivant_charcoal_grey_55"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>