<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel"
            type="com.caressa.tools_calculators.viewmodel.ToolsCalculatorsViewModel"/>
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical"
    android:paddingStart="@dimen/_5sdp"
    android:paddingEnd="@dimen/_5sdp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/btn_fill_dialog"
            android:backgroundTint="@color/white"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_close_input">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_input"
                style="@style/VivantTitle"
                android:layout_margin="@dimen/_15sdp"
                android:text="@string/SYSTOLIC_DIALOG_TITLE"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/description_input"
                style="@style/ToolsQuestion"
                android:layout_margin="@dimen/_5sdp"
                android:text="@string/SYSTOLIC_DIALOG_MESSAGE"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_input" />

            <com.caressa.common.view.ArcTabLayout
                android:id="@+id/layout_tab"
                app:isTemplate="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_normal_outline"
                app:tabSelectedTextColor="@color/white"
                app:tabTextColor="@color/textViewColor"
                app:tabBackground="@drawable/selector_tab_bg"
                app:tabInlineLabel="true"
                app:tabMode="fixed"
                app:tabIndicatorHeight="0dp"
                app:tabIconTint="@color/selector_toggle_text_color"
                app:tabTextAppearance="@style/ToolsDialogTabLayout"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_input">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_depression"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_3sdp"
                    style="@style/VivantTitle"
                    android:text="@string/SYSTOLIC_BP" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_anxiety"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/VivantTitle"
                    android:text="@string/DIASTOLIC_BP" />


            </com.caressa.common.view.ArcTabLayout>

            <LinearLayout
                android:id="@+id/lltInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_tab">

                <RelativeLayout
                    android:id="@+id/systolicBpLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:visibility="visible">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editBox1"
                        style="@style/CustomEdittextDialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:hint="0.01 - 500"
                        android:focusable="true"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="4"
                        android:text=""/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ToolsQuestion"
                        android:layout_marginEnd="@dimen/_23sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:text="Upper Limit"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/diastolicBpLayout"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editBox2"
                        style="@style/CustomEdittextDialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:hint="10 - 500"
                        android:focusable="true"
                        android:maxLength="4"
                        android:text="" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ToolsQuestion"
                        android:layout_marginEnd="@dimen/_23sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:text="Lower Limit"/>

                </RelativeLayout>

            </LinearLayout>

            <com.caressa.common.view.ArcButton
                android:id="@+id/btn_save_input"
                app:isTemplate="true"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:gravity="center"
                android:text="@string/SAVE"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/lltInput"
                app:layout_constraintStart_toStartOf="@+id/lltInput"
                app:layout_constraintTop_toBottomOf="@+id/lltInput" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_close_input"
        android:layout_width="@dimen/_22sdp"
        android:layout_height="@dimen/_22sdp"
        app:srcCompat="@drawable/ic_close"
        android:tint="@color/vivant_charcoal_grey_55"
        android:background="@drawable/circle_drawable"
        android:backgroundTint="@color/white"
        android:elevation="@dimen/_3sdp"
        android:padding="@dimen/_4sdp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>